Fixes to button and inputs on mobile.

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -308,19 +308,20 @@ footer.bk-footer h2 {
         } 
         ul {
             li {
-                border-bottom: darken(@color-swatch1,10%);
+                border-bottom: 1px solid @color-swatch2;
                 padding-bottom: 10px;
+                padding-top: 20px;
                 &:first-child {
-                    border-bottom: 1px solid @color-swatch2;
+                    padding-top: 0;
+                }
+                &:last-child {
+                    border-bottom : 0;
+                    padding-bottom: 0;
                 }
             }
         }
         ul li a:hover {
             text-decoration: none;
-        }
-        li:last-child {
-            padding-bottom: 0;
-            padding-top: 20px;
         }
         // Tweet Content
         .twitter-profile-pic {
@@ -470,6 +471,9 @@ footer.bk-footer h2 {
     background-color: @font-swatch7-background-color-hover
 }
 
+.widget.clicktocall a {
+    font-weight: 600;
+}
 
 /* ===============================
    PROFILE WIDGET
@@ -826,8 +830,9 @@ footer.bk-footer h2 {
 .form-group.productlist-search {
   position: relative;
   input[type=search] {
-    padding-right: 85px;
+    padding-right: 0;
     box-sizing: border-box;
+    width: 100%;
   }
   button {
     position: absolute;
@@ -866,7 +871,7 @@ label {
 
 select {
   background-color: transparent;
-  border: 1px solid lighten(@color-swatch5, 12%);
+  border: 1px solid lighten(@color-swatch5, 25%);
   color: @font-swatch5-color;
   line-height: 20px;
   font-size: 13px;
@@ -904,6 +909,7 @@ select {
   } 
   .form-group.productlist-search button {
     bottom: 0;
+    width: 20%;
   }
 
 }
@@ -922,7 +928,7 @@ select {
 
 .widget.ecomproduct .ecom-product .ecom-product-go-to-checkout-btn {
   margin: 10px 0;
-  display: inline-block;
+  float: left;
   padding: 0 12px;
   font-weight: 600;
 }
@@ -1194,16 +1200,6 @@ button.blog-search-submit-button, .widget.signupform button, .widget.profile but
         line-height:bkscale(@font-swatch5-line-height,0.9);
     }
 
-    /* SIGNUP FORM */
-
-    .widget.signupform fieldset input {
-        width: 73%;
-    }
-
-    .widget.signupform button {
-        width: 24%;
-    }
-
 }
 
 /* ===============================
@@ -1263,45 +1259,8 @@ button.blog-search-submit-button, .widget.signupform button, .widget.profile but
 
     /* SPACING */
 
-    .widget.contactform form , .widget.twitter ul {
-        padding: 20px;
-    }
-
     .widget.map {
         padding: 20px;
-    }
-
-    .widget.signupform {
-        padding: 14px 20px 20px;
-    }
-
-    /* CLICK TO CALL */
-
-    .widget.clicktocall {
-        padding: 12px 0px;
-    }
-
-    .widget.clicktocall a {
-        background-image: image('/images/ic-call.svg');
-        background-size: 7px;
-        background-color: @font-swatch7-background-color;
-        background-position: 14px center;
-        background-repeat: no-repeat;
-        padding: 16px 18px 16px 33px;
-        font-family: @font-swatch7-font-family;
-        font-size: @font-swatch7-font-size;
-        font-weight: @font-swatch7-font-weight;
-        line-height: @font-swatch7-line-height;
-        color: @font-swatch7-color;
-        letter-spacing: @font-swatch7-letter-spacing;
-        text-decoration: none;
-    }
-
-    .widget.clicktocall a:hover {
-        background-color: @font-swatch7-background-color-hover;
-    }
-    .widget.twitter ul {
-        padding: 0;
     }
 
 }
